Changes to app, layout
Adjusted spacing of components, and added ability to search datasets directly from the dashTable.

--- a/apps/dashr-ncbi-explorer/assets/circos-styles.css
+++ b/apps/dashr-ncbi-explorer/assets/circos-styles.css
@@ -119,7 +119,7 @@ body ::-webkit-scrollbar-thumb {
     box-shadow: none !important;
 }
 #circos-body tr, #circos-body th , #circos-body td{
-    background-color: #1F2132 !important;
+    background-color: #1F2132;
     border-color: #222830 !important;
     padding: 5px;
     height: 40px;
