--- a/apps/dashr-ncbi-explorer/assets/grid-css.css
+++ b/apps/dashr-ncbi-explorer/assets/grid-css.css
@@ -10,7 +10,7 @@ body {
   display: grid;
   width: 100%;
   height: 100%;
-  grid-template-columns: 11% 11% 11% auto auto auto 11% 11%;
+  grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   grid-template-rows: auto auto;
 }
 
@@ -32,7 +32,7 @@ body {
 
 .item-b {
   grid-column-start: 3;
-  grid-column-end: 7;
+  grid-column-end: 9;
   grid-row-start: 1;
   grid-row-end: 2;
   padding: 0px;
@@ -44,8 +44,8 @@ body {
 }
 
 .item-c {
-  grid-column-start: 7;
-  grid-column-end: 9;
+  grid-column-start: 9;
+  grid-column-end: 11;
   grid-row-start: 1;
   grid-row-end: 2;
   padding: 10px;
@@ -61,7 +61,7 @@ body {
 
 .item-d {
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
   padding: 10px;
@@ -77,7 +77,7 @@ body {
 
 
 .item-e {
-  grid-column-start: 4;
+  grid-column-start: 3;
   grid-column-end: 6;
   grid-row-start: 2;
   grid-row-end: 3;
@@ -94,7 +94,7 @@ body {
 
 .item-f {
   grid-column-start: 6;
-  grid-column-end: 8;
+  grid-column-end: 9;
   grid-row-start: 2;
   grid-row-end: 3;
   padding: 10px;
@@ -109,8 +109,8 @@ body {
 }
 
 .item-g {
-  grid-column-start: 8;
-  grid-column-end: 9;
+  grid-column-start: 9;
+  grid-column-end: 11;
   grid-row-start: 2;
   grid-row-end: 3;
   padding: 10px;
